fix: publish.yml

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,4 +26,4 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - run: pod trunk push ${{ github.repository }}.podspec
+      - run: pod trunk push ${{ github.repository.name }}.podspec
