--- a/SwiftyTable.xcodeproj/xcshareddata/xcschemes/SwiftyTable-Package.xcscheme
+++ b/SwiftyTable.xcodeproj/xcshareddata/xcschemes/SwiftyTable-Package.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "SwiftyTable::SwiftyTable"
+            BuildableName = "SwiftyTable.framework"
+            BlueprintName = "SwiftyTable"
+            ReferencedContainer = "container:SwiftyTable.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
