--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  test_on_ios:
+  test:
     runs-on: macos-latest
     
     env:
@@ -21,23 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Build for iOS
+      - name: Build
         run: xcodebuild build -scheme ${{ env.package }} -destination "name=${{ env.IOS_SIMULATOR }}"
         
-      - name: Run tests on iOS
+      - name: Run tests
         run: xcodebuild test -scheme ${{ env.package }} -destination "name=${{ env.IOS_SIMULATOR }}"
-        
-  test_on_tvos:
-    runs-on: macos-latest
-    
-    env:
-      TVOS_SIMULATOR: "Apple TV"
-    
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Build for tvOS
-        run: xcodebuild build -scheme ${{ env.package }} -destination "name=${{ env.TVOS_SIMULATOR }}"
-        
-      - name: Run tests on tvOS
-        run: xcodebuild test -scheme ${{ env.package }} -destination "name=${{ env.TVOS_SIMULATOR }}"
