--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
   # This workflow contains a single job called "build"
   publish:
     # The type of runner that the job will run on
-    runs-on: macos-10.15
+    runs-on: macos-latest
     
     env:
       COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
